[package]
name = "libs"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
# kdr-aus git
divvy = { git = "https://github.com/kdr-aus/divvy" }

# crates.io
colored = "2"
crossbeam = "0.8"
fastrand = "1"
# TODO change to rustc_hash
fxhash = "0.2"
parking_lot = "0.11"
rayon = "1"
serde = "1"
serde_json = "1"
