[package]
name = "ogma-ls"
version = "0.1.0"
authors = ["Kurt Lawrence <kurtlawrence92@gmail.com>"]
edition = "2021"

[lib]
path = "lib.rs"

[[bin]]
name = "ogma-ls"
path = "main.rs"

[dependencies]
# workspace
libs = { path = "../libs" }
ogma = { path = "../ogma" }

# crates.io
bitflags = "1"
log = "0.4"
lsp-server = "0.5"
lsp-types = "0.91"
simplelog = "0.10"
