[package]
name = "ogma-shell"
version = "0.1.0"
authors = ["kurt <kurtlawrence92@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
# workspace
libs = { path = "../libs" }
ogma =    { path = "../ogma" }
ogma-ls = { path = "../ogma-ls" }

# crates.io
cansi =	"2"
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = [ "crossterm" ] }
unicode-width = "0.1"
