[package]
name = "ogma"
version = "0.1.0"
authors = ["kurt <kurtlawrence92@gmail.com>"]
edition = "2018"

[dependencies]
# workspace
libs = { path = "../libs" }

# kdr-aus git
numfmt = { git = "https://github.com/kdr-aus/numfmt" }
table = { git = "https://github.com/kdr-aus/table" }

# crates.io
comfy-table = "4"
kserd = "0.5"
lazy_static = "1"
nom = "7"
notify = "4"
paste = "1"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "macros"] }
encoding = "0.2"
