[package]
name = "ogma"
version = "0.5.0"
authors = ["kurt <kurtlawrence92@gmail.com>"]
edition = "2021"

[dependencies]
# workspace
libs = { path = "../libs" }

# kdr-aus git
kserd = { git = "https://github.com/kurtlawrence/kserd" }
numfmt = { git = "https://github.com/kdr-aus/numfmt" }
table = { git = "https://github.com/kdr-aus/table" }

# crates.io
backtrace = "0.3"
bitflags = "1.3.2"
comfy-table = "6"
encoding = "0.2"
globset = "0.4"
lazy_static = "1"
nom = "7"
notify = "4"
paste = "1"
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
simsearch = "0.2"
time = { version = "0.3", features = ["formatting", "macros"] }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[[test]]
name = "commands"
path = "tests/commands/mod.rs"

